modificacion de querie 767

--- a/css/styles.css
+++ b/css/styles.css
@@ -1057,6 +1057,9 @@ ul{
     }
 }
 @media(max-width: 767px){
+    .effect-wrap .effect-1{
+        display: none;
+    }
     .home-text{
         margin-bottom: 80px;
     }
